--- a/Horde-Game-Files/.godot/editor/editor_layout.cfg
+++ b/Horde-Game-Files/.godot/editor/editor_layout.cfg
@@ -8,7 +8,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=272
-dock_hsplit_3=-421
+dock_hsplit_3=-350
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -16,12 +16,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://test_plane.tscn", "res://first_person_controller.tscn", "res://main_menu.tscn", "res://game_session_menu.tscn"]
+open_scenes=["res://test_plane.tscn", "res://first_person_controller.tscn", "res://game_session_menu.tscn"]
 
 [ScriptEditor]
 
 open_scripts=["res://first_person_controller.gd", "res://game_session_menu.gd", "res://main_menu.gd"]
-open_help=[]
+open_help=["DisplayServer", "Input"]
 script_split_offset=70
 list_split_offset=0
 
