--- a/Horde-Game-Files/.godot/editor/editor_layout.cfg
+++ b/Horde-Game-Files/.godot/editor/editor_layout.cfg
@@ -8,7 +8,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=272
-dock_hsplit_3=-221
+dock_hsplit_3=-346
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -16,7 +16,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://test_plane.tscn", "res://first_person_controller.tscn", "res://game_session_menu.tscn"]
+open_scenes=["res://test_plane.tscn", "res://first_person_controller.tscn", "res://placeholdel_environment_tileset.tscn"]
 
 [ScriptEditor]
 
@@ -31,6 +31,6 @@ log_filter_0=false
 log_filter_2=false
 log_filter_1=true
 log_filter_3=true
-log_filter_4=false
+log_filter_4=true
 collapse=false
 show_search=true
