added bullets and broke destructible objects
🫠

--- a/Horde-Game-Files/.godot/editor/editor_layout.cfg
+++ b/Horde-Game-Files/.godot/editor/editor_layout.cfg
@@ -8,7 +8,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=517
-dock_hsplit_3=-346
+dock_hsplit_3=-709
 dock_hsplit_4=0
 dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
@@ -21,8 +21,8 @@ dock_8_selected_tab_idx=0
 dock_floating={}
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
-dock_filesystem_selected_paths=PackedStringArray("res://objects_that_break.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://placeholder-assets/environment/")
+dock_filesystem_selected_paths=PackedStringArray("res://placeholder-assets/environment/destroyed-cube.obj")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://placeholder-assets/", "res://placeholder-assets/environment/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -30,24 +30,24 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://test_plane.tscn", "res://first_person_controller.tscn", "res://objects_that_break.tscn", "res://fragment.tscn", "res://bullet.tscn")
-current_scene="res://first_person_controller.tscn"
+current_scene="res://objects_that_break.tscn"
 center_split_offset=-533
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://bullet.gd", "res://first_person_controller.gd", "res://fragment.gd", "res://game_session_menu.gd", "res://main_menu.gd", "res://objects_that_break.gd", "res://weapon_cast.gd"]
-open_help=["DisplayServer", "Fragment", "Input", "Mesh", "PhysicsBody3D", "TriangleMesh"]
+open_scripts=["res://bullet.gd", "res://first_person_controller.gd", "res://fragment.gd", "res://game_session_menu.gd", "res://main_menu.gd", "res://weapon_cast.gd"]
+open_help=["Camera3D", "CollisionShape3D", "DisplayServer", "Fragment", "Input", "Mesh", "MeshInstance3D", "PhysicsBody3D", "SphereMesh", "TriangleMesh"]
 script_split_offset=70
 list_split_offset=0
-selected_script="res://first_person_controller.gd"
+selected_script=""
 
 [editor_log]
 
-log_filter_0=false
-log_filter_2=false
+log_filter_0=true
+log_filter_2=true
 log_filter_1=true
 log_filter_3=true
 log_filter_4=true
