--- a/Horde-Game-Files/.godot/global_script_class_cache.cfg
+++ b/Horde-Game-Files/.godot/global_script_class_cache.cfg
@@ -1,4 +1,16 @@
 list=Array[Dictionary]([{
+"base": &"Node3D",
+"class": &"Broken_Object",
+"icon": "",
+"language": &"GDScript",
+"path": "res://objects_that_break.gd"
+}, {
+"base": &"Node3D",
+"class": &"Bullet",
+"icon": "",
+"language": &"GDScript",
+"path": "res://bullet.gd"
+}, {
 "base": &"RigidBody3D",
 "class": &"Fragment",
 "icon": "",
