--- a/Horde-Game-Files/.godot/editor/editor_layout.cfg
+++ b/Horde-Game-Files/.godot/editor/editor_layout.cfg
@@ -30,19 +30,19 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://test_plane.tscn", "res://first_person_controller.tscn", "res://objects_that_break.tscn", "res://fragment.tscn", "res://bullet.tscn")
-current_scene="res://objects_that_break.tscn"
+current_scene="res://test_plane.tscn"
 center_split_offset=-533
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://bullet.gd", "res://first_person_controller.gd", "res://fragment.gd", "res://game_session_menu.gd", "res://main_menu.gd", "res://weapon_cast.gd"]
-open_help=["Camera3D", "CollisionShape3D", "DisplayServer", "Fragment", "Input", "Mesh", "MeshInstance3D", "PhysicsBody3D", "SphereMesh", "TriangleMesh"]
+open_scripts=["res://bullet.gd", "res://first_person_controller.gd", "res://fragment.gd", "res://game_session_menu.gd", "res://main_menu.gd", "res://objects_that_break.gd", "res://weapon_cast.gd"]
+open_help=["Camera3D", "CollisionShape3D", "DisplayServer", "Fragment", "Input", "Mesh", "MeshInstance3D", "PhysicsBody3D", "RigidBody3D", "SphereMesh", "TriangleMesh"]
 script_split_offset=70
 list_split_offset=0
-selected_script=""
+selected_script="res://bullet.gd"
 
 [editor_log]
 
