Made destructible environment pieces more modular
Now it's possible to import the GLTF files into the scene and have it work without having to code for every new GLTF object. Projectile spawn is now below the camera to reduce visibility issues. Very happy with this update.

--- a/Horde-Game-Files/.godot/editor/editor_layout.cfg
+++ b/Horde-Game-Files/.godot/editor/editor_layout.cfg
@@ -7,8 +7,8 @@ dock_filesystem_file_list_display_mode=1
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=517
-dock_hsplit_3=-709
+dock_hsplit_2=395
+dock_hsplit_3=-216
 dock_hsplit_4=0
 dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
@@ -21,16 +21,16 @@ dock_8_selected_tab_idx=0
 dock_floating={}
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
-dock_filesystem_selected_paths=PackedStringArray("res://placeholder-assets/environment/destroyed-cube.obj")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://placeholder-assets/", "res://placeholder-assets/environment/")
+dock_filesystem_selected_paths=PackedStringArray("res://placeholder-assets/environment/test-collision-column/pillar-stationary-col.glb")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://placeholder-assets/", "res://placeholder-assets/environment/", "res://placeholder-assets/environment/test-collision-column/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://test_plane.tscn", "res://first_person_controller.tscn", "res://objects_that_break.tscn", "res://fragment.tscn", "res://bullet.tscn")
-current_scene="res://test_plane.tscn"
+open_scenes=PackedStringArray("res://test_plane.tscn", "res://first_person_controller.tscn", "res://placeholder-assets/environment/test-collision-column/column_that_chips.tscn", "res://fragment.tscn", "res://bullet.tscn", "res://chipped_environment_spawn.tscn", "res://objects_that_break.tscn")
+current_scene="res://placeholder-assets/environment/test-collision-column/column_that_chips.tscn"
 center_split_offset=-533
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -38,11 +38,11 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://bullet.gd", "res://first_person_controller.gd", "res://fragment.gd", "res://game_session_menu.gd", "res://main_menu.gd", "res://objects_that_break.gd", "res://weapon_cast.gd"]
-open_help=["Camera3D", "CollisionShape3D", "DisplayServer", "Fragment", "Input", "Mesh", "MeshInstance3D", "PhysicsBody3D", "RigidBody3D", "SphereMesh", "TriangleMesh"]
-script_split_offset=70
+open_scripts=["res://bullet.gd", "res://first_person_controller.gd", "res://fragment.gd", "res://game_session_menu.gd", "res://main_menu.gd", "res://objects_that_chip.gd", "res://weapon_cast.gd"]
+open_help=["Camera3D", "CollisionShape3D", "DisplayServer", "Fragment", "Input", "Mesh", "MeshInstance3D", "Node", "PhysicsBody3D", "RigidBody3D", "SphereMesh", "TriangleMesh", "Vector3", "Vector3i"]
+script_split_offset=251
 list_split_offset=0
-selected_script="res://bullet.gd"
+selected_script="res://objects_that_chip.gd"
 
 [editor_log]
 
