--- a/Horde-Game-Files/.godot/editor/script_editor_cache.cfg
+++ b/Horde-Game-Files/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 36,
+"column": 78,
 "folded_lines": Array[int]([16, 22]),
 "h_scroll_position": 0,
-"row": 35,
-"scroll_position": 24.0,
+"row": 13,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -45,25 +45,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 3,
+"column": 6,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 25,
-"scroll_position": 8.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://objects_that_break.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 35,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 33,
-"scroll_position": 5.0,
+"row": 20,
+"scroll_position": 3.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -76,8 +62,8 @@ state={
 "column": 14,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 27,
-"scroll_position": 6.0,
+"row": 37,
+"scroll_position": 12.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -93,5 +79,23 @@ state={
 "row": 13,
 "scroll_position": 0.0,
 "selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://objects_that_chip.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 30,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 28,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 5,
+"selection_from_line": 17,
+"selection_to_column": 30,
+"selection_to_line": 28,
 "syntax_highlighter": "GDScript"
 }
