Re-organized scenes and added blank test scene
Re-organized scenes/scripts and added a new test scene to test Godot logic when needed

--- a/Horde-Game-Files/.godot/global_script_class_cache.cfg
+++ b/Horde-Game-Files/.godot/global_script_class_cache.cfg
@@ -3,11 +3,11 @@ list=Array[Dictionary]([{
 "class": &"Bullet",
 "icon": "",
 "language": &"GDScript",
-"path": "res://bullet.gd"
+"path": "res://weapon_scripts_scenes/bullet.gd"
 }, {
 "base": &"RigidBody3D",
 "class": &"Fragment",
 "icon": "",
 "language": &"GDScript",
-"path": "res://fragment.gd"
+"path": "res://environment_scripts_scenes/fragment.gd"
 }])
