--- a/Horde-Game-Files/.godot/scene_groups_cache.cfg
+++ b/Horde-Game-Files/.godot/scene_groups_cache.cfg
@@ -1,3 +1,7 @@
-[res://fragment.tscn]
+[res://ui_scripts_scenes/test-scene.tscn]
+
+groups=[&"sphere", &"cube"]
+
+[res://environment_scripts_scenes/fragment.tscn]
 
 groups=[&"destructible"]
