--- a/Horde-Game-Files/.godot/editor/editor_layout.cfg
+++ b/Horde-Game-Files/.godot/editor/editor_layout.cfg
@@ -8,29 +8,29 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=395
-dock_hsplit_3=-216
+dock_hsplit_3=-598
 dock_hsplit_4=0
 dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
-dock_filesystem_selected_paths=PackedStringArray("res://placeholder-assets/environment/test-collision-column/pillar-stationary-col.glb")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://placeholder-assets/", "res://placeholder-assets/environment/", "res://placeholder-assets/environment/test-collision-column/")
+dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://placeholder-assets/environment/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://test_plane.tscn", "res://first_person_controller.tscn", "res://placeholder-assets/environment/test-collision-column/column_that_chips.tscn", "res://fragment.tscn", "res://bullet.tscn", "res://chipped_environment_spawn.tscn", "res://objects_that_break.tscn")
-current_scene="res://placeholder-assets/environment/test-collision-column/column_that_chips.tscn"
+open_scenes=PackedStringArray("res://environment_scripts_scenes/test_plane.tscn", "res://player_scripts/first_person_controller.tscn", "res://placeholder-assets/environment/test-collision-column/column_that_chips.tscn", "res://environment_scripts_scenes/fragment.tscn", "res://weapon_scripts_scenes/bullet.tscn", "res://environment_scripts_scenes/chipped_environment_spawn.tscn", "res://environment_scripts_scenes/objects_that_break.tscn", "res://ui_scripts_scenes/test-scene.tscn")
+current_scene="res://environment_scripts_scenes/chipped_environment_spawn.tscn"
 center_split_offset=-533
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -38,11 +38,11 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://bullet.gd", "res://first_person_controller.gd", "res://fragment.gd", "res://game_session_menu.gd", "res://main_menu.gd", "res://objects_that_chip.gd", "res://weapon_cast.gd"]
+open_scripts=["res://weapon_scripts_scenes/bullet.gd", "res://player_scripts/first_person_controller.gd", "res://environment_scripts_scenes/fragment.gd", "res://ui_scripts_scenes/game_session_menu.gd", "res://ui_scripts_scenes/main_menu.gd", "res://environment_scripts_scenes/objects_that_chip.gd", "res://ui_scripts_scenes/test-script.gd"]
 open_help=["Camera3D", "CollisionShape3D", "DisplayServer", "Fragment", "Input", "Mesh", "MeshInstance3D", "Node", "PhysicsBody3D", "RigidBody3D", "SphereMesh", "TriangleMesh", "Vector3", "Vector3i"]
 script_split_offset=251
 list_split_offset=0
-selected_script="res://objects_that_chip.gd"
+selected_script="res://weapon_scripts_scenes/bullet.gd"
 
 [editor_log]
 
