fixed pause menu behavior and reduced issues with fragmented objects

--- a/Horde-Game-Files/.godot/global_script_class_cache.cfg
+++ b/Horde-Game-Files/.godot/global_script_class_cache.cfg
@@ -10,4 +10,10 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://environment_scripts_scenes/fragment.gd"
+}, {
+"base": &"Node",
+"class": &"waiter",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Wait.gd"
 }])
