--- a/Horde-Game-Files/.godot/editor/editor_layout.cfg
+++ b/Horde-Game-Files/.godot/editor/editor_layout.cfg
@@ -14,35 +14,35 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://placeholder-assets/environment/")
+dock_filesystem_selected_paths=PackedStringArray("res://placeholder-assets/environment/test-collision-column/pillar-middle.glb")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://placeholder-assets/", "res://placeholder-assets/environment/", "res://placeholder-assets/environment/test-collision-column/", "res://Notes/", "res://global_script/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://environment_scripts_scenes/test_plane.tscn", "res://player_scripts/first_person_controller.tscn", "res://placeholder-assets/environment/test-collision-column/column_that_chips.tscn", "res://environment_scripts_scenes/fragment.tscn", "res://weapon_scripts_scenes/bullet.tscn", "res://environment_scripts_scenes/chipped_environment_spawn.tscn", "res://environment_scripts_scenes/objects_that_break.tscn", "res://ui_scripts_scenes/test-scene.tscn")
-current_scene="res://environment_scripts_scenes/chipped_environment_spawn.tscn"
-center_split_offset=-533
+open_scenes=PackedStringArray("res://environment_scripts_scenes/test_plane.tscn", "res://player_scripts/first_person_controller.tscn", "res://placeholder-assets/environment/test-collision-column/column_that_chips.tscn", "res://environment_scripts_scenes/fragment.tscn", "res://weapon_scripts_scenes/bullet.tscn", "res://environment_scripts_scenes/chipped_environment_spawn.tscn")
+current_scene="res://environment_scripts_scenes/fragment.tscn"
+center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://weapon_scripts_scenes/bullet.gd", "res://player_scripts/first_person_controller.gd", "res://environment_scripts_scenes/fragment.gd", "res://ui_scripts_scenes/game_session_menu.gd", "res://ui_scripts_scenes/main_menu.gd", "res://environment_scripts_scenes/objects_that_chip.gd", "res://ui_scripts_scenes/test-script.gd"]
+open_scripts=["res://weapon_scripts_scenes/bullet.gd", "res://player_scripts/first_person_controller.gd", "res://environment_scripts_scenes/fragment.gd", "res://ui_scripts_scenes/game_session_menu.gd", "res://global_script/Global.gd", "res://Notes/Horde-Based-Game-Notes.txt", "res://ui_scripts_scenes/main_menu.gd", "res://player_scripts/Movement_State.gd", "res://environment_scripts_scenes/objects_that_chip.gd", "res://player_scripts/Player_State_Machine.gd", "res://ui_scripts_scenes/test-script.gd", "res://Wait.gd"]
 open_help=["Camera3D", "CollisionShape3D", "DisplayServer", "Fragment", "Input", "Mesh", "MeshInstance3D", "Node", "PhysicsBody3D", "RigidBody3D", "SphereMesh", "TriangleMesh", "Vector3", "Vector3i"]
 script_split_offset=251
 list_split_offset=0
-selected_script="res://weapon_scripts_scenes/bullet.gd"
+selected_script="res://environment_scripts_scenes/fragment.gd"
 
 [editor_log]
 
@@ -51,7 +51,7 @@ log_filter_2=true
 log_filter_1=true
 log_filter_3=true
 log_filter_4=true
-collapse=false
+collapse=true
 show_search=true
 
 [ShaderEditor]
